GymRat AI - Full workout plan system with AI coaching

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,23 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Python backend
+backend/venv/
+backend/__pycache__/
+backend/**/__pycache__/
+backend/*.pyc
+backend/data/chroma/
+backend/data/pdfs/
+backend/.env
+.venv/
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+Thumbs.db
+
+# Misc
+pdf_content.txt
